--- a/index.html
+++ b/index.html
@@ -9,5 +9,25 @@
   </head>
   <body>
     <h1>Good Sunday!</h1>
+    <div class="box">
+      <div class="block block1"></div>
+      <div class="block block2"></div>
+      <div class="block block3"></div>
+      <div class="block block4"></div>
+      <div class="block block5"></div>
+      <div class="block block6"></div>
+      <div class="block block7"></div>
+      <div class="block block8"></div>
+      <div class="block block9"></div>
+      <div class="block block10"></div>
+      <div class="block block11"></div>
+      <div class="block block12"></div>
+      <div class="block block13"></div>
+      <div class="block block14"></div>
+      <div class="block block15"></div>
+      <div class="block block16"></div>
+      <div class="block block17"></div>
+      <div class="block block18"></div>
+    </div>
   </body>
 </html>
